# serializer version: 1
# name: test_valve_setup
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Valve',
      <ValveEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.valve',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_valve_setup.1
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ValveEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 50,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Valve',
      <ValveEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ValveEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.valve_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_valve_setup.2
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Valve',
      <EntityStateAttribute.RESTORED: 'restored'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.valve',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_valve_setup.3
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Valve',
      <EntityStateAttribute.RESTORED: 'restored'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ValveEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.valve_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
